# todoList

./: database.db  pyproject.toml  server.py
src/: app.py  main.py
src/api/: deps.py  routes.py
src/api/endpoints/: task.py  user.py
src/config/: settings.py
src/core/models/: task.py  user.py
src/core/schems/: task.py  token.py  user.py
src/core/service/: task.py  user.py
src/repository/: session.py
src/repository/database/: base.py  task.py  user.py
src/utils/: auth_jwt.py
